--- a/Farmacia/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia/Farmacia.csproj
@@ -36,6 +36,9 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\store32.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ClosedXML, Version=0.93.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ClosedXML.0.93.1\lib\net40\ClosedXML.dll</HintPath>
@@ -148,14 +151,15 @@
     <Compile Include="Formularios\Ventas.designer.cs">
       <DependentUpon>Ventas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manual.cs">
+    <Compile Include="Formularios\Manual.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manual.Designer.cs">
+    <Compile Include="Formularios\Manual.Designer.cs">
       <DependentUpon>Manual.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Clases\Upper.cs" />
     <EmbeddedResource Include="Formularios\Acerca.resx">
       <DependentUpon>Acerca.cs</DependentUpon>
     </EmbeddedResource>
@@ -183,7 +187,7 @@
     <EmbeddedResource Include="Formularios\Ventas.resx">
       <DependentUpon>Ventas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manual.resx">
+    <EmbeddedResource Include="Formularios\Manual.resx">
       <DependentUpon>Manual.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -197,6 +201,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="App.config" />
+    <None Include="app.manifest" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
